# FiberPostProcess

./: CMakeLists.txt  README.md  csv.h
Testing/: CMakeLists.txt  vtkTestMain.h
src/: CMakeLists.txt  FiberPostProcess.cxx  FiberPostProcess.xml  csv.h  processing.cxx  processing.h  utils.cxx  utils.h
src/Testing/: CMakeLists.txt  CMakeLists.txt~  csvTest.cxx  csvTestInitData.cxx
src/Testing/Data/: Cingulum.vtk  CingulumIdentity.vtk.md5  CingulumNormalRun-cleaned.vtk  CingulumNormalRun.vtk  LeftMotor.vtk.md5  LeftMotor1100.vtk.md5  LeftMotor1110.vtk.md5  LeftMotor1111.vtk.md5  LeftMotorLengthMatch.vtk.md5  inputT2.vtk
